Loading and Broken image icons will no longer be drawn if the image size is smaller than the icon size.  This fixes a problem where garbage was being left on the screen after the image loaded, because the Linux RenderingContext does not corectly clip image drawing. b=109418, r=pavlov, sr=blizzard, a=blizard on behalf of drivers